# cpp-library-template

./: CMakeLists.txt  CMakePresets.json  LICENSE.md  README.md  vcpkg.json
src/: CMakeLists.txt  MyLibrary.cpp  MyLibrary.hpp
test/: CMakeLists.txt  MyLibraryTest.cpp
